2.3/svc-task2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - name: nginx
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
